ターンを非同期で作成した

--- a/src/main/resources/templates/the_game.html
+++ b/src/main/resources/templates/the_game.html
@@ -26,9 +26,7 @@
   <div>
     <h3>入室</h3>
   </div>
-  <div><a href="/the_gameMatch">待機部屋へ</a></div>
-  <div>※順番に部屋に割り当てられます.</div>
-  <div>４人がそろう, または初めの入室者が「スタート」を押すとゲームが開始します.</div>
+  <div><a href="/trump/the_gameMatch">待機部屋へ</a></div>
 </body>
 
 </html>
