--- a/src/main/resources/templates/trump.html
+++ b/src/main/resources/templates/trump.html
@@ -12,17 +12,17 @@
 
   <tbody sec:authorize="hasRole('ROLE_USER')">
     <ol>
-      <li><a href="/doubt">ダウト(4人)</a></li>
-      <li><a href="/memory">神経衰弱(1人)</a></li>
-      <li><a href="/the_game">ザ・ゲーム(1人)</a></li>
+      <li><a href="/doubt">ダウト</a></li>
+      <li><a href="/memory">神経衰弱</a></li>
+      <li><a href="/trump/the_game">ザ・ゲーム</a></li>
       <li><a href="/shitinarabe">七並べ(4人)</a></li>
     </ol>
   </tbody>
   <tbody sec:authorize="hasRole('ROLE_ADMIN')">
     <ol>
-      <li><a href="/doubt">ダウト(ホスト)(4人)</a></li>
-      <li><a href="/memory">神経衰弱(1人)</a></li>
-      <li><a href="/the_game">ザ・ゲーム(ホスト)(1人)</a></li>
+      <li><a href="/doubt">ダウト(ホスト)</a></li>
+      <li><a href="/memory">神経衰弱</a></li>
+      <li><a href="/trump/the_game">ザ・ゲーム(ホスト)</a></li>
       <li><a href="/shitinarabe">七並べ(4人)</a></li>
     </ol>
   </tbody>
