神経衰弱ゲームの完成

--- a/src/main/resources/templates/memory.html
+++ b/src/main/resources/templates/memory.html
@@ -22,13 +22,15 @@
   <br />
 
   <div>
-    <h3>ゲーム選択</h3>
+    <h3>部屋入室</h3>
   </div>
-  <div><a href="/memoryFight1">一人用ゲームスタート</a></div>
-  <br />
-  <div><a href="/memoryMatch">待機部屋へ（複数人用）</a></div>
-  <div>※順番に部屋に割り当てられます.</div>
-  <div>４人がそろう, または初めの入室者が「スタート」を押すとゲームが開始します.</div>
+  <div><a href="/memoryMatch">待機部屋へ</a></div>
+  <div>※初めの入室者が「スタート」を押すとゲームが開始します.</div>
+
+  <h3>＜簡単なゲーム説明＞</h3>
+  <div>裏向きにならべたカードの中から、同じ数字のカードを2枚引き当てるゲームです。</div>
+  <div>手札は0枚からはじまって、最後にカードの枚数を1番多く集めた人が勝ちです。</div>
+  <div>どこにどのカードがあったのかを覚えておける記憶力が大切です。</div>
 </body>
 
 </html>
