ザ・ゲームの完成

--- a/src/main/resources/templates/the_game.html
+++ b/src/main/resources/templates/the_game.html
@@ -23,6 +23,31 @@
 
   <a href="https://www.youtube.com/watch?v=qsVuTGRPSN0" target="_blank" rel="noopener noreferrer">ある実況者が遊んでいる様子</a>
 
+  <br />
+
+  <div>
+    <h2>ゲーム説明<h2>
+  </div>
+  <ol>
+    <ul><a>協力ゲーム</a></ul>
+    <ul><a>時間:15分～30分</a></ul>
+    <ul><a>人数:1～4</a></ul>
+    <ul><a>手札は1人7枚</a></ul>
+    <ul><a>カードは2～99と書かれたカードがそれぞれい1枚ずつの98枚ある</a></ul>
+    <ul><a>スタートプレイヤーは1や100に近い数字もっている人のほうがゲームをクリアしやすい(誰でもいい)</a></ul>
+    <ul><a>順番は待機部屋に入った順に回る。スタートプレイヤーが待機部屋に入ったのが2番目なら次の人は3番目の人（最後だったら一番最初に入った人）</a></ul>
+    <ul><a>手番のプレイヤーは2枚以上提出する(山札がない場合のみ1枚以上提出)</a></ul>
+    <ul><a>提出したカードは1枚ずつ、場1～4のいずれかに配置する</a></ul>
+    <ul><a>場1、2は1から昇順に配置していくフィールド</a></ul>
+    <ul><a>場1、2で一番最後に置かれた数字より大きい数字を出さなければならない(1,15,の時に12を配置できない)</a></ul>
+    <ul><a>ただし、一番最後に置かれた数字よりちょうど10小さい時は配置できる(1,15,の時に5を配置できる)</a></ul>
+    <ul><a>場3、4は100から降順に配置していくフィールド</a></ul>
+    <ul><a>場3、4で一番最後に置かれた数字より小さい数字を出さなければならない(100,89,の時に98は配置できない)</a></ul>
+    <ul><a>ただし、一番最後に置かれた数字よりちょうど10大きい時は配置できる(100,89,の時に99は配置できる)</a></ul>
+    <ul><a>手番が終わると手札を7枚になるように補充して次の人へ回る</a></ul>
+    <ul><a>これを手番プレイヤーが2枚以上(山札がない時は1枚以上)提出できない時ゲームは終了する</a></ul>
+  </ol>
+
   <div>
     <h3>入室</h3>
   </div>
