--- a/src/main/resources/templates/doubt.html
+++ b/src/main/resources/templates/doubt.html
@@ -20,17 +20,11 @@
   <br />
 
   <div>
-    <h3>待機部屋</h3>
-  </div>
-
-  <br />
-
-  <div>
     <h3>入室</h3>
   </div>
   <div><a href="/doubtMatch">待機部屋へ</a></div>
   <div>※順番に部屋に割り当てられます.</div>
-  <div>４人がそろう, または初めの入室者が「スタート」を押すとゲームが開始します.</div>
+  <div>初めの入室者が「スタート」を押すとゲームが開始します.※必ず4人が集まってから</div>
 </body>
 
 </html>
